	* Fixes for Cassandra 0.7 client (tjake)
	* New generator FileGenerator (nono)
	* Fixes for MongoDB (nono)
	* Fixes for Voldemort (nono)
	* JDBC client (sudiptodas)
	* HotspotIntegerGenerator (sudiptodas)	
        * Optimizing cassandra7 (joaquincasares)
        * Mysql key fix (joaquincasares)
        * Added a db plugin for Infinispan (maniksurtani)
        * gh-31 Support to stop benchmark after a maximum specified elapsed time. (sudiptodas)
        * gh-35 Cassandra0.8 support (joaquincasares)
        * gh-30 IllegalArgumentException with MongoDB (m1ch1)

0.1.3
	* Voldemort binding (rsumbaly)
	* HBase client improvements (ryanobjc)
	* Fixes to Cassandra 0.7 binding (johanoskarsson, nickmbailey)
	* Added an interface for exporting the measurements and a JSON implementation. It can write to both stdout and to a file (johanoskarsson)
	* Other minor fixes (brianfrankcooper)