@@ -10,6 +10,7 @@
         * gh-31 Support to stop benchmark after a maximum specified elapsed time. (sudiptodas)
         * gh-35 Cassandra0.8 support (joaquincasares)
         * gh-30 IllegalArgumentException with MongoDB (m1ch1)
+        * gh-27 MongoDbClient was not working with non localhost URLs (arunxarun)
 
 0.1.3
 	* Voldemort binding (rsumbaly)
